appId: "com.recipedia"
---
- tapOn:
    id: "RecipePreparation::AddButton::RoundButton"
    label: Press new preparation step button
- scrollUntilVisible:
    element:
      id: "RecipePreparation::TextRender::0::Content"
    direction: DOWN
    speed: 60
- tapOn:
    id: "RecipePreparation::TextRender::0::TextInputTitle::TextInput"
    label: Press preparation step title
- inputText:
    text: "Step title"
    label: Write the preparation step title in the input text
- hideKeyboard:
    label: Close the keyboard
- tapOn:
    id: "RecipePreparation::TextRender::0::TextInputContent::TextInput"
    label: Press preparation step paragraph
- inputText:
    text: "Step paragraph"
    label: Write the preparation step paragraph in the input text
- hideKeyboard:
    label: Close the keyboard
