appId: "com.recipedia"
---
- tapOn:
    id: "RecipeTags::RoundButton-content"
    label: Add a new tag
- tapOn:
    id: "RecipeTags::List::.*:TextInput"
    label: Press the new tag TextInput
- inputText:
    text: "Japanese"
    label: Write the tag in the input text
- pressKey: "enter"
