appId: "com.recipedia"
---
- tapOn:
    id: "RecipeIngredients::AddButton::RoundButton"
    label: Press new ingredient button
- tapOn:
    id: "RecipeIngredients::TextRender::0::QuantityInput::TextInput"
    label: Press on quantity input
- inputText:
    text: "4321"
    label: Write the quantity in the input text
- hideKeyboard:
    label: Close the keyboard
- tapOn:
    id: "RecipeIngredients::TextRender::0::Dropdown::TextInput"
    label: Press on ingredient name input
- inputText:
    text: "Celery"
    label: Write the quantity in the input text
- hideKeyboard:
    label: Close the keyboard
