appId: "com.recipedia"
---
- runFlow:
    when:
      true: ${output.isPersons == true}
    commands:
      - tapOn:
          id: "RecipePersons::OpenModal::RoundButton"
          label: Tap on OCR button of recipe persons
      - runFlow:
          when:
            true: ${output.isDescriptionToOCR == true && output.isTagsToOCR == true}
          commands:
            - tapOn:
                id: "Modal::List#4::SquareButton::Image"
                label: Select persons and time picture
      - runFlow:
          when:
            true: ${(output.isDescriptionToOCR == true && output.isTagsToOCR == false) || (output.isDescriptionToOCR == false && output.isTagsToOCR == true)}
          commands:
            - tapOn:
                id: "Modal::List#3::SquareButton::Image"
                label: Select persons and time picture
      - runFlow:
          when:
            true: ${output.isDescriptionToOCR == false && output.isTagsToOCR == false}
          commands:
            - tapOn:
                id: "Modal::List#2::SquareButton::Image"
                label: Select persons and time picture
      - runFlow:
          file: ../android/validateWithoutCropping.yaml
          when:
            platform: Android
      # TODO iOS
      #- runFlow:
      #    file: iOS/validateWithoutCropping.yaml
      #    when:
      #      platform: iOS
- runFlow:
    when:
      true: ${output.isPersons == false}
    commands:
      - tapOn:
          id: "RecipePersons::ManuallyFill::RoundButton"
          label: Tap on button to enter person manually
      - tapOn:
          id: "RecipePersons::TextInput"
          label: Tap on text input of the person to prepare
      - inputText:
          text: "2"
          label: Enter the person
      - pressKey: "enter"
